--- a/_includes/resume_body.html
+++ b/_includes/resume_body.html
@@ -6,7 +6,7 @@
             <a href="mailto:jackmaney@gmail.com">jackmaney@gmail.com</a>
         </p>
         <p>Website:
-            <a href="http://jackmaney.com">jackmaney.com</a>
+            <a href="https://jackmaney.com">jackmaney.com</a>
         </p>
     </div>
 
@@ -103,7 +103,7 @@
 
                 <ul>
                     <li>
-                        <a href="http://whitepaper.pinsightmedia.com/age" target="_blank">
+                        <a href="https://whitepaper.pinsightmedia.com/age" target="_blank">
                             Guess My Age: Age Discrepancies Across Ad Exchanges
                         </a>
                     </li>
@@ -210,7 +210,7 @@
             <li>
                 Developed an application in Perl using
                 <a href="https://metacpan.org/module/DBI" target="_blank">DBI</a> for
-                <a href="http://en.wikipedia.org/wiki/K-means%2B%2B" target="_blank">k-means++ clustering</a>. 
+                <a href="https://en.wikipedia.org/wiki/K-means%2B%2B" target="_blank">k-means++ clustering</a>. 
                 This application is able to handle data sets of millions of rows with 1--100 variables.
             </li>
 
@@ -275,7 +275,7 @@
         </h3>
 
         <p>At the 2011 Joint Statistical Meetings,
-            <a href="http://www.amstat.org/meetings/jsm/2011/onlineprogram/AbstractDetails.cfm?abstractid=303386" target="_blank">a
+            <a href="https://www.amstat.org/meetings/jsm/2011/onlineprogram/AbstractDetails.cfm?abstractid=303386" target="_blank">a
                 paper was presented</a> that introduced the idea of a Universal Correlation Coefficient. This
             coefficient measures
             the degree of dependency (but not the form of dependency) for two discrete random variables.</p>
@@ -289,7 +289,7 @@
 
     <div class="well">
         <h3>
-            <a href="http://pg-utils.readthedocs.io/en/latest/?badge=latest#" target="_blank">pg-utils: Utilities for working with
+            <a href="https://pg-utils.readthedocs.io/en/latest/?badge=latest#" target="_blank">pg-utils: Utilities for working with
                 PostgreSQL</a>
         </h3>
 
@@ -333,21 +333,21 @@
 
             <li>
                 Python,
-                <a href="http://spark.apache.org/docs/latest/api/python/index.html" target="_blank">PySpark</a>,
+                <a href="https://spark.apache.org/docs/latest/api/python/index.html" target="_blank">PySpark</a>,
                 <a href="https://pypi.org/project/h3/" target="_blank">H3</a>,
                 <a href="https://pypi.org/project/Shapely/" target="_blank">Shapely</a>,
-                <a href="http://pandas.pydata.org/" target="_blank">Pandas</a>,
-                <a href="http://www.numpy.org/" target="_blank">NumPy</a>,
+                <a href="https://pandas.pydata.org/" target="_blank">Pandas</a>,
+                <a href="https://www.numpy.org/" target="_blank">NumPy</a>,
                 <a href="https://www.scipy.org/" target="_blank">SciPy</a>,
-                <a href="http://scikit-learn.org/stable/" target="_blank">scikit-learn</a>,
+                <a href="https://scikit-learn.org/stable/" target="_blank">scikit-learn</a>,
                 <a href="https://requests.readthedocs.io/en/master/" target="_blank">Requests</a>,
-                <a href="http://matplotlib.org/" target="_blank">matplotlib</a>,
+                <a href="https://matplotlib.org/" target="_blank">matplotlib</a>,
                 <a href="https://web.stanford.edu/~mwaskom/software/seaborn/" target="_blank">seaborn</a>, PyCharm
             </li>
 
             <li>
                 Relational Databases,
-                <a href="http://www.greenplum.com/" target="_blank">Greenplum</a> (Massively Parallel Processing Distributed System),
+                <a href="https://www.greenplum.com/" target="_blank">Greenplum</a> (Massively Parallel Processing Distributed System),
                 PostgreSQL, Oracle, MySQL, Microsoft SQL
                 Server, MS SQL, OLAP, SQL
             </li>
@@ -359,7 +359,7 @@
             <li>JSON, GeoJSON, Parquet, CSV</li>
 
             <li>
-                <a href="http://www.r-project.org/" target="_blank">R</a>
+                <a href="https://www.r-project.org/" target="_blank">R</a>
             </li>
 
             <li>
@@ -380,7 +380,7 @@
                 <a href="https://42matters.com/docs/overview" target="_blank">42matters API</a> for app metadata</li>
 
             <li>
-                <a href="http://infegy.com/social-media-analytics" target="_blank">Social Radar API</a>, Facebook Ads API
+                <a href="https://infegy.com/social-media-analytics" target="_blank">Social Radar API</a>, Facebook Ads API
             </li>
 
         </ul>
@@ -435,7 +435,7 @@
             <li>Greenplum User Training from Pivotal, 2014</li>
 
             <li>
-                Attended <a href="http://www.kdd.org/kdd2014/" target="_blank">KDD 2014</a>
+                Attended <a href="https://www.kdd.org/kdd2014/" target="_blank">KDD 2014</a>
             </li>
 
             <li>QlikView Developer Training from Qlik, 2013</li>
