--- a/_includes/resume_body.html
+++ b/_includes/resume_body.html
@@ -31,8 +31,13 @@
     <h2>Experience</h2>
 
     <div class="well">
+        <h3>agilon health</h3>
+        <p>Lead Data Scientist - July 2021--Present</p>
+    </div>
+
+    <div class="well">
         <h3>Cerner Corporation</h3>
-        <p>Data Scientist - July 2020--Present</p>
+        <p>Data Scientist - July 2020--June 2021</p>
 
         <ul>
             <li>
