--- a/_includes/resume_body.html
+++ b/_includes/resume_body.html
@@ -33,6 +33,15 @@
     <div class="well">
         <h3>agilon health</h3>
         <p>Lead Data Scientist - July 2021--Present</p>
+        
+        <ul>
+            <li>
+                Worked on models to predict avoidable inpatient visits and medication adherence.
+            </li>
+            <li>
+                Worked with the ML Ops team to validate datasets that have been moved to the Cloud.
+            </li>
+        </ul>
     </div>
 
     <div class="well">
