--- a/_includes/resume_body.html
+++ b/_includes/resume_body.html
@@ -31,8 +31,13 @@
     <h2>Experience</h2>
 
     <div class="well">
+        <h3>Shopify</h3>
+        <p>Data Scientist - June 2022--Present</p>
+    </div>
+
+    <div class="well">
         <h3>agilon health</h3>
-        <p>Lead Data Scientist - July 2021--Present</p>
+        <p>Lead Data Scientist - July 2021--June 2022</p>
         
         <ul>
             <li>
