Added tasks done at Shopify

--- a/_includes/resume_body.html
+++ b/_includes/resume_body.html
@@ -32,7 +32,16 @@
 
     <div class="well">
         <h3>Shopify</h3>
-        <p>Data Scientist - June 2022--Present</p>
+        <p>Data Scientist - June 2022--September 2022</p>
+
+        <ul>
+            <li>
+                Helped identify suspicious leads by implementing a markov chain to detect gibberish subdomain names.
+            </li>
+            <li>
+                Took over the (manually run) referral program and worked with data engineers to automate this process.
+            </li>
+        </ul>
     </div>
 
     <div class="well">
