Slight Shopify tweak

--- a/_includes/resume_body.html
+++ b/_includes/resume_body.html
@@ -34,6 +34,7 @@
         <h3>Shopify</h3>
         <p>Data Scientist - June 2022--September 2022</p>
 
+        <p>Before being laid off, I was part of the Plans & Pricing Data Science team.</p>
         <ul>
             <li>
                 Helped identify suspicious leads by implementing a markov chain to detect gibberish subdomain names.
