--- a/_includes/resume_body.html
+++ b/_includes/resume_body.html
@@ -31,6 +31,11 @@
     <h2>Experience</h2>
 
     <div class="well">
+        <h3>nbkc bank</h3>
+        <p>Senior Data Engineer - November 2022--Present</p>
+    </div>
+
+    <div class="well">
         <h3>Shopify</h3>
         <p>Data Scientist - June 2022--September 2022</p>
 
