--- a/_includes/resume_body.html
+++ b/_includes/resume_body.html
@@ -32,7 +32,7 @@
 
     <div class="well">
         <h3>nbkc bank</h3>
-        <p>Senior Data Engineer - November 2022--Present</p>
+        <p>Senior Data Engineer, AVP - November 2022--Present</p>
     </div>
 
     <div class="well">
