--- a/_includes/resume_body.html
+++ b/_includes/resume_body.html
@@ -301,57 +301,6 @@
 
     </div>
 
-    <h2>Open-source Software</h2>
-
-    <div class="well">
-        <h3>
-            <a href="https://github.com/jackmaney/ucc" target="_blank">Universal Correlation Coefficient</a>
-        </h3>
-
-        <p>At the 2011 Joint Statistical Meetings,
-            <a href="https://www.amstat.org/meetings/jsm/2011/onlineprogram/AbstractDetails.cfm?abstractid=303386" target="_blank">a
-                paper was presented</a> that introduced the idea of a Universal Correlation Coefficient. This
-            coefficient measures
-            the degree of dependency (but not the form of dependency) for two discrete random variables.</p>
-
-        <p>I have written an R library that implements this Universal Correlation Coefficient. This coefficient can be
-            used
-            to automate the discovery of (potentially non-linear) relationships among pairs of discrete random
-            variables.</p>
-
-    </div>
-
-    <div class="well">
-        <h3>
-            <a href="https://pg-utils.readthedocs.io/en/latest/?badge=latest#" target="_blank">pg-utils: Utilities for working with
-                PostgreSQL</a>
-        </h3>
-
-        <p>Some handy utilities that I've written for processing data in either PostgreSQL or Greenplum.</p>
-
-    </div>
-
-    <div class="well">
-        <h3>
-            <a href="https://github.com/jackmaney/python-stdlib-list" target="_blank">Python Standard Library List</a>
-        </h3>
-
-        <p>Lists of names of packages in the Python standard library (for versions 2.6, 2.7, and 3.2-8), along with the
-            code used to grab the list of libraries from the official Python docs. This is my most popular repository on
-            GitHub.</p>
-
-    </div>
-
-    <div class="well">
-        <h3>
-            <a href="https://github.com/jackmaney/Diophantus" target="_blank">Diophantus</a>
-        </h3>
-
-        <p>Diophantus, a pet project created to teach myself Java, originated as Mathematica code that I wrote as a
-            graduate student. The original code generated examples and helped form conjectures for what became a series
-            of two peer-reviewed mathematical publications.</p>
-    </div>
-
     <h2>Skills</h2>
 
     <div class="well">
@@ -363,7 +312,11 @@
 
             <li>AWS SageMaker, BlazingText</li>
 
+            <li>Azure DevOps, Azure Cosmos, Azure Key Vault</li>
+
             <li>Apache Spark, Apache Hive, Apache Hadoop, HDFS</li>
+
+            <li>Airflow</li> 
 
             <li>
                 Python,
@@ -390,7 +343,7 @@
 
             <li>Tableau, QlikView</li>
 
-            <li>JSON, GeoJSON, Parquet, CSV</li>
+            <li>JSON, GeoJSON, Parquet, CSV, XML</li>
 
             <li>
                 <a href="https://www.r-project.org/" target="_blank">R</a>
