Resume reorg, adding comments, try to fix GH auth

--- a/_includes/resume_body.html
+++ b/_includes/resume_body.html
@@ -33,6 +33,18 @@
     <div class="well">
         <h3>nbkc bank</h3>
         <p>Senior Data Engineer, AVP - November 2022--Present</p>
+
+        <ul>
+            <li>
+                Automated a report used by the Deposits team.
+            </li>
+            <li>
+                Fixed incorrect assignments of Personal/Business accounts for survey data from customers.
+            </li>
+            <li>
+                Altered Power BI dashboard of internal expenses to correctly show sub-account transactions. Assisted in showing results to the CFO and gathering feedback.
+            </li>
+        </ul>
     </div>
 
     <div class="well">
@@ -307,69 +319,80 @@
         <h3>Languages and Technologies</h3>
 
         <ul>
+            <li>
+                Programming Languages:
+                <ul>
+                    <li>Python</li>
+                    <li>SQL</li>
+                    <li>Bash</li>
+                    <li>R</li>
+                    <li>Java</li>
+                    <li>Kotlin</li>
+                    <li>Scala</li>
+                    <li>Perl</li>
+                </ul>
+            </li>
 
-            <li>AWS, EMR, EC2, S3</li>
+            <li>
+                Cloud Technologies:
+                <ul>
+                    <li>AWS</li>
+                    <li>S3</li>
+                    <li>AWS Sagemaker</li>
+                    <li>EMR</li>
+                    <li>EC2</li>
+                    <li>Azure DevOps</li>
+                    <li>Azure Cosmos</li>
+                    <li>Azure Key Vault</li>
+                </ul>
+            </li>
 
-            <li>AWS SageMaker, BlazingText</li>
+            <li>Apache Spark, Apache Hadoop, HDFS</li>
 
-            <li>Azure DevOps, Azure Cosmos, Azure Key Vault</li>
+            <li>Business Intelligence: Tableau, Microsoft Power BI, QlikView</li>
 
-            <li>Apache Spark, Apache Hive, Apache Hadoop, HDFS</li>
+            <li>
+                Some of the Python libraries that I've used: <a href="https://spark.apache.org/docs/latest/api/python/index.html" target="_blank">PySpark</a>,
+                BlazingText, 
+                <a href="https://pypi.org/project/h3/" target="_blank">H3</a>, 
+                <a href="https://pypi.org/project/Shapely/" target="_blank">Shapely</a>, 
+                <a href="https://pandas.pydata.org/" target="_blank">Pandas</a>, 
+                <a href="https://www.numpy.org/" target="_blank">NumPy</a>, 
+                <a href="https://www.scipy.org/" target="_blank">SciPy</a>, 
+                <a href="https://scikit-learn.org/stable/" target="_blank">scikit-learn</a>, 
+                <a href="https://requests.readthedocs.io/en/master/" target="_blank">Requests</a>, 
+                <a href="https://matplotlib.org/" target="_blank">matplotlib</a>, 
+                <a href="https://web.stanford.edu/~mwaskom/software/seaborn/" target="_blank">seaborn</a> 
+            </li>
+
 
             <li>Apache Airflow</li> 
 
             <li>
-                Python,
-                <a href="https://spark.apache.org/docs/latest/api/python/index.html" target="_blank">PySpark</a>,
-                <a href="https://pypi.org/project/h3/" target="_blank">H3</a>,
-                <a href="https://pypi.org/project/Shapely/" target="_blank">Shapely</a>,
-                <a href="https://pandas.pydata.org/" target="_blank">Pandas</a>,
-                <a href="https://www.numpy.org/" target="_blank">NumPy</a>,
-                <a href="https://www.scipy.org/" target="_blank">SciPy</a>,
-                <a href="https://scikit-learn.org/stable/" target="_blank">scikit-learn</a>,
-                <a href="https://requests.readthedocs.io/en/master/" target="_blank">Requests</a>,
-                <a href="https://matplotlib.org/" target="_blank">matplotlib</a>,
-                <a href="https://web.stanford.edu/~mwaskom/software/seaborn/" target="_blank">seaborn</a>, PyCharm
+                IDEs/Text Editors Used: PyCharm, IntelliJ IDEA, Visual Studio Code, Eclipsepse
             </li>
+
+            <li>Data Formats: CSV, XSLX, JSON, GeoJSON, Parquet, XML</li>
+
+            <li>Docker</li>
+
+            <li>Version Control: Git, SVN, GitHub, GitLab, Assembla</li>
+
+            <li>Task Tracking: JIRA, Azure Devops Boards, Pivotal Tracker, Confluence, Assembla</li>
+
+            <li>Operating Systems: Linux (Amazon Linux, openSUSE, Ubuntu, CentOS, RHEL), macOS, Windows, WSL, WSL2</li>
 
             <li>
-                Relational Databases,
-                <a href="https://www.greenplum.com/" target="_blank">Greenplum</a> (Massively Parallel Processing Distributed System),
-                PostgreSQL, Oracle, MySQL, Microsoft SQL
-                Server, MS SQL, OLAP, SQL
+                APIs used:
+                <ul>
+                    <li>SurveyMonkey (customer survey data)</li>
+                    <li>Ramp (tracking internal expenses, creating card numbers on the fly)</li>
+                    <li>Aylien (text analysis, NLP)</li>
+                    <li>42matters (mobile app metadata)</li>
+                    <li>Infegy's Social Radar API (social media analytics)</li>
+                    <li>Facebook Ads API</li>
+                </ul>
             </li>
-
-            <li>Kotlin, Java, Scala, IntelliJ IDEA, Eclipse</li>
-
-            <li>Tableau, QlikView</li>
-
-            <li>JSON, GeoJSON, Parquet, CSV, XML</li>
-
-            <li>
-                <a href="https://www.r-project.org/" target="_blank">R</a>
-            </li>
-
-            <li>
-                Perl,
-                <a href="https://metacpan.org/module/Moose" target="_blank">Moose (OO Perl)</a>, DBI, threads, threads::shared,
-                Thread::Queue, Template::Toolkit
-            </li>
-
-            <li>Git, SVN, GitHub, GitLab, Assembla, Source Control, Version Control</li>
-
-            <li>JIRA, Pivotal Tracker, Confluence, Assembla</li>
-
-            <li>Linux, Amazon Linux, openSUSE, Ubuntu, CentOS, RHEL, bash</li>
-
-            <li>The <a href="https://aylien.com/text-api/" target="_blank">Aylien text analysis API</a></li>
-
-            <li>The
-                <a href="https://42matters.com/docs/overview" target="_blank">42matters API</a> for app metadata</li>
-
-            <li>
-                <a href="https://infegy.com/social-media-analytics" target="_blank">Social Radar API</a>, Facebook Ads API
-            </li>
-
         </ul>
 
     </div>
@@ -380,6 +403,8 @@
 
         <ul>
             <li>Mathematics</li>
+
+            <li>Python</li> 
 
             <li>Topological Data Analysis</li>
 
