--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -15,22 +15,28 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
+                <!-- Highlight "Resume" area on navbar iff we're looking at the resume page. -->
                 {% if page.url == "/resume/" %}
                 <li class="active">
                     {% else %}
                 <li>
                     {% endif %}
-                    <a href="/resume/">Resume <span class="sr-only">(current)</span></a>
+                    <a href="/resume/">Resume</a>
                 </li>
+                <!--LinkedIn button-->
                 <li>
                     <a href="https://www.linkedin.com/in/jackmaney" target="_blank">
                         <i class="fa fa-linkedin-square"></i>
                     </a>
-                    {% if page.is_code_page %}
+                <!--Check for the `code_page` flag in the YAML front-matter to be enabled.-->
+                <!--If it's enabled, then highlight the Code Projects dropdown-->
+                <!--TODO: This highlighting doesn't seem to work. Might need to update Bootstrap.-->
+                {% if page.is_code_page %}
                 <li class="dropdown active">
-                    {% else %}
+                {% else %}
                 <li class="dropdown">
-                    {% endif %}
+                {% endif %}
+                    <!--Sub-dropdown for individual code projects-->
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Code
                         Projects <span class="caret"></span></a>
                     <ul class="dropdown-menu" role="menu">
@@ -43,9 +49,13 @@
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li>
+                    <!--If we're on a page for a code project, the `code_url` attribute is defined in the YAML front matter.-->
+                    <!--The `code_url` points to the code repo of the project.-->
+                    <!--If there is a `code_url`, then that's where the GitHub icon points to. Otherwise, it's the repo of this website.-->
                     {% if page.code_url %}
-                    <a href="{{page.code_url}}"><i class="fa fa-github"></i></a> {% else %}
-                    <a href="https://github.com/jackmaney/jackmaney.github.io" target="_blank"><i class="fa fa-github"></i></a>
+                        <a href="{{page.code_url}}"><i class="fa fa-github"></i></a> 
+                    {% else %}
+                        <a href="https://github.com/jackmaney/jackmaney.github.io" target="_blank"><i class="fa fa-github"></i></a>
                     {% endif %}
                 </li>
             </ul>
