--- a/_layouts/main_page.html
+++ b/_layouts/main_page.html
@@ -1,8 +1,10 @@
-{% include header.html %} {% include nav.html %}
+{% include header.html %} 
+{% include nav.html %}
 <div class="container">
     <div class="row">
         <div class=".col-md-9">
-            {{ content }} {% include pagination.html %}
+            {{ content }} 
+            {% include pagination.html %}
         </div>
     </div>
 </div>
