--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,4 +1,5 @@
-{% include header.html %} {% include nav.html %}
+{% include header.html %} 
+{% include nav.html %}
 <div class="container">
     <div class="row">
         <div class=".col-md-9">
