--- a/_includes/resume_body.html
+++ b/_includes/resume_body.html
@@ -369,7 +369,7 @@
             <li>Apache Airflow</li> 
 
             <li>
-                IDEs/Text Editors Used: PyCharm, IntelliJ IDEA, Visual Studio Code, Eclipsepse
+                IDEs/Text Editors Used: PyCharm, IntelliJ IDEA, Visual Studio Code, Eclipse
             </li>
 
             <li>Data Formats: CSV, XSLX, JSON, GeoJSON, Parquet, XML</li>
