--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,8 +9,7 @@
         {% if page.title %} {{page.title}} {% else %} Jack Maney {% endif %}
     </title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="{{ site.baseurl }}/images/favicon.ico" type="image/x-icon" />
-    <link rel="icon" href="{{ site.baseurl }}/images/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" type="image/png" href="{{ site.baseurl }}/images/favicon.png">
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css"
         href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css" />
