Resume and dependency tweak

--- a/_includes/resume_body.html
+++ b/_includes/resume_body.html
@@ -44,6 +44,10 @@
             <li>
                 Altered Power BI dashboard of internal expenses to correctly show sub-account transactions. Assisted in showing results to the CFO and gathering feedback.
             </li>
+            <li>
+                Did a nearly complete rewrite of the back-end for tracking movement of customers among segments.
+                Using an object-oriented design, the addition of new segments or changes to existing segments are now much easier to implement.
+            </li>
         </ul>
     </div>
 
