Resume tweak, added faraday-retry gem

--- a/_includes/resume_body.html
+++ b/_includes/resume_body.html
@@ -13,7 +13,7 @@
     <div class="well">
         <ul>
             <li>
-                Data Science professional with a decade of experience in the telecommunications, ad tech, financial service, and healthcare sectors.
+                Data Science and Data Engineering professional with a decade of experience in the telecommunications, ad tech, financial service, and healthcare sectors.
             </li>
             <li>
                 Able to derive insights and extract business value from data sets with thousands to billions of rows.
