--- a/_includes/resume_body.html
+++ b/_includes/resume_body.html
@@ -48,6 +48,9 @@
                 Did a nearly complete rewrite of the back-end for tracking movement of customers among segments.
                 Using an object-oriented design, the addition of new segments or changes to existing segments are now much easier to implement.
             </li>
+            <li>
+                Built a heuristics-based approach for determining whether an ACH credit is a direct deposit.
+            </li>
         </ul>
     </div>
 
