Minor resume tweaks

--- a/_includes/resume_body.html
+++ b/_includes/resume_body.html
@@ -351,6 +351,7 @@
                     <li>Azure DevOps</li>
                     <li>Azure Cosmos</li>
                     <li>Azure Key Vault</li>
+                    <li>Snowflake</li>
                 </ul>
             </li>
 
@@ -392,7 +393,7 @@
             <li>
                 APIs used:
                 <ul>
-                    <li>Zendesk</li>
+                    <li>Zendesk (ETL on customer ticket data, adding custom fields)</li>
                     <li>SurveyMonkey (customer survey data)</li>
                     <li>Ramp (tracking internal expenses, creating card numbers on the fly)</li>
                     <li>Aylien (text analysis, NLP)</li>
