--- a/_includes/resume_body.html
+++ b/_includes/resume_body.html
@@ -36,21 +36,25 @@
 
         <ul>
             <li>
-                Automated a report used by the Deposits team.
-            </li>
-            <li>
-                Fixed incorrect assignments of Personal/Business accounts for survey data from customers.
-            </li>
-            <li>
-                Altered Power BI dashboard of internal expenses to correctly show sub-account transactions. Assisted in showing results to the CFO and gathering feedback.
-            </li>
-            <li>
                 Did a nearly complete rewrite of the back-end for tracking movement of customers among segments.
                 Using an object-oriented design, the addition of new segments or changes to existing segments are now much easier to implement.
             </li>
             <li>
                 Built a heuristics-based approach for determining whether an ACH credit is a direct deposit.
             </li>
+            <li>
+                Altered Power BI dashboard of internal expenses to correctly show sub-account transactions. Assisted in showing results to the CFO and gathering feedback.
+            </li>
+            <li>
+                Fixed incorrect assignments of Personal/Business accounts for survey data from customers.
+            </li>
+            <li>
+                Automated a report used by the Deposits team.
+            </li>
+            <li>
+                Used the Salesforce API to send emails when certain events are triggered.
+            </li>
+            <li>Mentoring members of the Data Team.</li>
         </ul>
     </div>
 
@@ -355,12 +359,12 @@
                 </ul>
             </li>
 
-            <li>Apache Spark, Apache Hadoop, HDFS</li>
+            <li>Apache Spark, Apache Hive, Apache Hadoop, HDFS</li>
 
             <li>Business Intelligence: Tableau, Microsoft Power BI, QlikView</li>
 
             <li>
-                Some of the Python libraries that I've used: <a href="https://spark.apache.org/docs/latest/api/python/index.html" target="_blank">PySpark</a>,
+                Python libraries of note: <a href="https://spark.apache.org/docs/latest/api/python/index.html" target="_blank">PySpark</a>,
                 BlazingText, 
                 <a href="https://pypi.org/project/h3/" target="_blank">H3</a>, 
                 <a href="https://pypi.org/project/Shapely/" target="_blank">Shapely</a>, 
@@ -370,7 +374,8 @@
                 <a href="https://scikit-learn.org/stable/" target="_blank">scikit-learn</a>, 
                 <a href="https://requests.readthedocs.io/en/master/" target="_blank">Requests</a>, 
                 <a href="https://matplotlib.org/" target="_blank">matplotlib</a>, 
-                <a href="https://web.stanford.edu/~mwaskom/software/seaborn/" target="_blank">seaborn</a> 
+                <a href="https://web.stanford.edu/~mwaskom/software/seaborn/" target="_blank">seaborn</a>, 
+                <a href="https://plotly.com/python/" target="_blank">plotly</a>
             </li>
 
 
@@ -386,13 +391,14 @@
 
             <li>Version Control: Git, SVN, GitHub, GitLab, Assembla</li>
 
-            <li>Task Tracking: JIRA, Azure Devops Boards, Pivotal Tracker, Confluence, Assembla</li>
+            <li>Task Tracking and Documentation: JIRA, Azure Devops Boards, Pivotal Tracker, Confluence, Assembla</li>
 
             <li>Operating Systems: Linux (Amazon Linux, openSUSE, Ubuntu, CentOS, RHEL), macOS, Windows, WSL, WSL2</li>
 
             <li>
                 APIs used:
                 <ul>
+                    <li>Salesforce (querying for specific events)</li>
                     <li>Zendesk (ETL on customer ticket data, adding custom fields)</li>
                     <li>SurveyMonkey (customer survey data)</li>
                     <li>Ramp (tracking internal expenses, creating card numbers on the fly)</li>
