New job at ACI (and slight resume tweak)

--- a/_includes/resume_body.html
+++ b/_includes/resume_body.html
@@ -31,8 +31,13 @@
     <h2>Experience</h2>
 
     <div class="well">
+        <h3>American Century Investments</h3>
+        <p>Senior Data Scientist - October 2023--Present</p>
+    </div>
+
+    <div class="well">
         <h3>nbkc bank</h3>
-        <p>Senior Data Engineer, AVP - November 2022--Present</p>
+        <p>Senior Data Engineer, AVP - November 2022--September 2023</p>
 
         <ul>
             <li>
@@ -440,7 +445,7 @@
 
         <p>Ph.D. Mathematics, May 2004</p>
 
-        <p>B.S Mathematics, Dec 1999</p>
+        <p>B.S. Mathematics, Dec 1999</p>
 
     </div>
 
