Added tasks to current gig

--- a/_includes/resume_body.html
+++ b/_includes/resume_body.html
@@ -33,6 +33,21 @@
     <div class="well">
         <h3>American Century Investments</h3>
         <p>Senior Data Scientist - October 2023--Present</p>
+
+        <ul>
+            <li>
+                Created and productionalized an Engagement Score for financial advisors.
+            </li>
+            <li>
+                Took over maintenance of an existing production recommender system.
+            </li>
+            <li>
+                Restructured parts of a Data Science monolithic repo, consolidating utility functions used in multiple places into a common utility library.
+            </li>
+            <li>
+                Ran several ad-hoc analyses, some of which were under very strict deadlines.
+            </li>
+        </ul>
     </div>
 
     <div class="well">
