Added MLOps training to training section

--- a/_includes/resume_body.html
+++ b/_includes/resume_body.html
@@ -469,6 +469,8 @@
     <div class="well">
 
         <ul>
+            <li>AWS MLOps Training and Workshop, 2024</li>
+
             <li>AWS Training from Amazon Web Services, 2018</li>
 
             <li>Apache Cassandra training from Learning Tree International, 2017</li>
