Slight rearrangement of L&T section

--- a/_includes/resume_body.html
+++ b/_includes/resume_body.html
@@ -363,18 +363,12 @@
                     <li>Perl</li>
                 </ul>
             </li>
-
             <li>
                 Cloud Technologies:
+
                 <ul>
-                    <li>AWS</li>
-                    <li>S3</li>
-                    <li>AWS Sagemaker</li>
-                    <li>EMR</li>
-                    <li>EC2</li>
-                    <li>Azure DevOps</li>
-                    <li>Azure Cosmos</li>
-                    <li>Azure Key Vault</li>
+                    <li>AWS: Redshift, EMR, EC2, SageMaker, Lambda, Secrets Manager</li>
+                    <li>Azure: Azure DevOps, Cosmos, Key Vault</li>
                     <li>Snowflake</li>
                 </ul>
             </li>
@@ -409,7 +403,7 @@
 
             <li>Docker</li>
 
-            <li>Version Control: Git, SVN, GitHub, GitLab, Assembla</li>
+            <li>Version Control: Git, GitHub, GitLab, SVN, Assembla</li>
 
             <li>Task Tracking and Documentation: JIRA, Azure Devops Boards, Pivotal Tracker, Confluence, Assembla</li>
 
