--- a/_includes/resume_body.html
+++ b/_includes/resume_body.html
@@ -351,17 +351,7 @@
 
         <ul>
             <li>
-                Programming Languages:
-                <ul>
-                    <li>Python</li>
-                    <li>SQL</li>
-                    <li>Bash</li>
-                    <li>R</li>
-                    <li>Java</li>
-                    <li>Kotlin</li>
-                    <li>Scala</li>
-                    <li>Perl</li>
-                </ul>
+                Programming Languages: Python, SQL, Bash, R, Java, Kotlin, Scala, Perl
             </li>
             <li>
                 Cloud Technologies:
