--- a/_includes/resume_body.html
+++ b/_includes/resume_body.html
@@ -32,7 +32,7 @@
 
     <div class="well">
         <h3>American Century Investments</h3>
-        <p>Senior Data Scientist - October 2023--Present</p>
+        <p>Senior Data Scientist - October 2023--October 2024</p>
 
         <ul>
             <li>
@@ -46,6 +46,9 @@
             </li>
             <li>
                 Ran several ad-hoc analyses, some of which were under very strict deadlines.
+            </li>
+            <li>
+                <b>Technologies Used:</b> Python, Amazon Redshift, pandas, scikit-learn, boto3, AWS, AWS Secrets Manager, AWS Lambda, S3, Tableau, git, GitHub
             </li>
         </ul>
     </div>
@@ -75,6 +78,9 @@
                 Used the Salesforce API to send emails when certain events are triggered.
             </li>
             <li>Mentoring members of the Data Team.</li>
+            <li>
+                <b>Technologies Used:</b> Python, pandas, Azure DevOps, Apache Airflow, Cosmos DB, Azure Key Vault, Power BI, git
+            </li>
         </ul>
     </div>
 
@@ -90,6 +96,9 @@
             <li>
                 Took over the (manually run) referral program and worked with data engineers to automate this process.
             </li>
+            <li>
+                <b>Technologies Used:</b> Python, GCS, git
+            </li>
         </ul>
     </div>
 
@@ -104,6 +113,9 @@
             <li>
                 Worked with the ML Ops team to validate datasets that have been moved to the Cloud.
             </li>
+            <li>
+                <b>Technologies Used:</b> Python, pandas, scikit-learn, S3, AWS SageMaker, git
+            </li>
         </ul>
     </div>
 
@@ -114,6 +126,9 @@
         <ul>
             <li>
                 Used AWS SageMaker, BlazingText, and association rule mining to analyze and enhance the Chart Assist Ontology. Created a prototype that could make terminologists up to five times more efficient at matching medical codes to related ontology concepts.
+            </li>
+            <li>
+                <b>Technologies Used:</b> Python, pandas, XGBoost, AWS Sagemaker, BlazingText, git
             </li>
         </ul>
     </div>
@@ -152,6 +167,10 @@
 
             <li>
                 Mentored members of the Data Science and Business Intelligence teams.
+            </li>
+
+            <li>
+                <b>Technologies Used:</b> Python, PySpark, AWS EMR, AWS Lambda, S3, Snowflake, Tableau, H3, plotly, GeoJSON, git, GitHub
             </li>
 
         </ul>
@@ -194,6 +213,9 @@
             <li>
                 Mentoring members of the Data Science and Business Intelligence teams.
             </li>
+            <li>
+                <b>Technologies Used:</b> Python, PySpark, AWS EMR, AWS Lambda, S3, Snowflake, Tableau, git, GitHub
+            </li>
         </ul>
     </div>
 
@@ -228,6 +250,10 @@
             </li>
 
             <li>Mentoring other members of the Data Science team.</li>
+
+            <li>
+                <b>Technologies Used:</b> Python, Pivotal Greenplum, pandas, scikit-learn, git
+            </li>
         </ul>
 
     </div>
@@ -248,6 +274,10 @@
             </li>
 
             <li>Built, Validated, and Deployed business intelligence reports using QlikView.</li>
+
+            <li>
+                <b>Technologies Used:</b> Perl, QlikView, SAS, SVN
+            </li>
         </ul>
     </div>
 
@@ -261,6 +291,9 @@
             </li>
             <li>Organized the restructuring of several KPI business intelligence reports.</li>
             <li>Built, tested, and deployed user management tools for account managers.</li>
+            <li>
+                <b>Technologies Used:</b> Perl, Ruby
+            </li>
         </ul>
     </div>
 
@@ -320,6 +353,10 @@
             <li>Was considered a resident expert of our data warehouse.</li>
 
             <li>Contributed to the on-boarding of two interns and two full-time employees.</li>
+
+            <li>
+                <b>Technologies Used:</b> Perl, Pivotal Greenplum, PostgreSQL, Oracle, ActiveMQ, Python, PHP
+            </li>
         </ul>
 
     </div>
