--- a/_includes/resume_body.html
+++ b/_includes/resume_body.html
@@ -48,7 +48,7 @@
                 Ran several ad-hoc analyses, some of which were under very strict deadlines.
             </li>
             <li>
-                <b>Technologies Used:</b> Python, Amazon Redshift, pandas, scikit-learn, boto3, AWS, AWS Secrets Manager, AWS Lambda, S3, Tableau, git, GitHub
+                <b>Technologies Used:</b> Python, Amazon Redshift, pandas, scikit-learn, boto3, Salesforce API, AWS, AWS Secrets Manager, AWS Lambda, S3, Tableau, git, GitHub
             </li>
         </ul>
     </div>
@@ -79,7 +79,7 @@
             </li>
             <li>Mentoring members of the Data Team.</li>
             <li>
-                <b>Technologies Used:</b> Python, pandas, Azure DevOps, Apache Airflow, Cosmos DB, Azure Key Vault, Power BI, git
+                <b>Technologies Used:</b> Python, pandas, Azure DevOps, Apache Airflow, Cosmos DB, Azure Key Vault, Ramp API, SurveyMonkey API, Power BI, git
             </li>
         </ul>
     </div>
@@ -170,7 +170,7 @@
             </li>
 
             <li>
-                <b>Technologies Used:</b> Python, PySpark, AWS EMR, AWS Lambda, S3, Snowflake, Tableau, H3, plotly, GeoJSON, git, GitHub
+                <b>Technologies Used:</b> Python, PySpark, AWS EMR, AWS Lambda, S3, Snowflake, Tableau, H3, plotly, GeoJSON, Aylien API, git, GitHub
             </li>
 
         </ul>
@@ -214,7 +214,7 @@
                 Mentoring members of the Data Science and Business Intelligence teams.
             </li>
             <li>
-                <b>Technologies Used:</b> Python, PySpark, AWS EMR, AWS Lambda, S3, Snowflake, Tableau, git, GitHub
+                <b>Technologies Used:</b> Python, PySpark, AWS EMR, AWS Lambda, S3, Snowflake, 42matters API, Tableau, git, GitHub
             </li>
         </ul>
     </div>
@@ -252,7 +252,7 @@
             <li>Mentoring other members of the Data Science team.</li>
 
             <li>
-                <b>Technologies Used:</b> Python, Pivotal Greenplum, pandas, scikit-learn, git
+                <b>Technologies Used:</b> Python, Pivotal Greenplum, pandas, scikit-learn, git, Assembla
             </li>
         </ul>
 
@@ -355,7 +355,7 @@
             <li>Contributed to the on-boarding of two interns and two full-time employees.</li>
 
             <li>
-                <b>Technologies Used:</b> Perl, Pivotal Greenplum, PostgreSQL, Oracle, ActiveMQ, Python, PHP
+                <b>Technologies Used:</b> Perl, Pivotal Greenplum, PostgreSQL, Oracle, ActiveMQ, Python, PHP, Facebook Ads API, SVN
             </li>
         </ul>
 
@@ -437,17 +437,7 @@
             <li>Operating Systems: Linux (Amazon Linux, openSUSE, Ubuntu, CentOS, RHEL), macOS, Windows, WSL, WSL2</li>
 
             <li>
-                APIs used:
-                <ul>
-                    <li>Salesforce (querying for specific events)</li>
-                    <li>Zendesk (ETL on customer ticket data, adding custom fields)</li>
-                    <li>SurveyMonkey (customer survey data)</li>
-                    <li>Ramp (tracking internal expenses, creating card numbers on the fly)</li>
-                    <li>Aylien (text analysis, NLP)</li>
-                    <li>42matters (mobile app metadata)</li>
-                    <li>Infegy's Social Radar API (social media analytics)</li>
-                    <li>Facebook Ads API</li>
-                </ul>
+                APIs used: Salesforce, Zendesk, SurveyMonkey, Ramp, Aylien, 42matters, Infegy Social Radar API, Facebook Ads API
             </li>
         </ul>
 
