Added contract position to resume

--- a/_includes/resume_body.html
+++ b/_includes/resume_body.html
@@ -31,6 +31,15 @@
     <h2>Experience</h2>
 
     <div class="well">
+        <h3>Snorkel AI</h3>
+        <p>
+            AI Expert Contributor: Mathematics (Contract) - January 2025--February 2025
+        </p>
+
+        Generated and reviewed mathematics problems.
+    </div>
+
+    <div class="well">
         <h3>American Century Investments</h3>
         <p>Senior Data Scientist - October 2023--October 2024</p>
 
