Added dbt, dbt Cloud. Tweaked Gemfile.lock

--- a/_includes/resume_body.html
+++ b/_includes/resume_body.html
@@ -404,6 +404,7 @@
 
                 <ul>
                     <li>AWS: Redshift, EMR, EC2, SageMaker, Lambda, Secrets Manager</li>
+                    <li>dbt, dbt cloud</li>
                     <li>Azure: Azure DevOps, Cosmos, Key Vault</li>
                     <li>Snowflake</li>
                 </ul>
