Added Regal API

--- a/_includes/resume_body.html
+++ b/_includes/resume_body.html
@@ -447,7 +447,7 @@
             <li>Operating Systems: Linux (Amazon Linux, openSUSE, Ubuntu, CentOS, RHEL), macOS, Windows, WSL, WSL2</li>
 
             <li>
-                APIs used: Salesforce, Zendesk, SurveyMonkey, Ramp, Aylien, 42matters, Infegy Social Radar API, Facebook Ads API
+                APIs used: Regal, Salesforce, Zendesk, SurveyMonkey, Ramp, Aylien, 42matters, Infegy Social Radar API, Facebook Ads API
             </li>
         </ul>
 
