--- a/_includes/resume_body.html
+++ b/_includes/resume_body.html
@@ -31,6 +31,24 @@
     <h2>Experience</h2>
 
     <div class="well">
+        <h3>Oasis Health Partners</h3>
+        <p>Sr. Data Integrations Engineer - March 2025--June 2025</p>
+
+        <ul>
+            <li>
+                Built architecture for the automation of member and clinical campaign data into Regal.
+            </li>
+            <li>
+                Created and altered several data pipelines in dbt.
+            </li>
+            <li>
+                <b>Technologies Used:</b> Python, dbt, AWS Lambda, AWS EC2, git, GitHub
+            </li>
+        </ul>
+
+    </div>
+
+    <div class="well">
         <h3>Snorkel AI</h3>
         <p>
             AI Expert Contributor: Mathematics (Contract) - January 2025--February 2025
